testsuite/tests/typecheck/should_fail/T17566c.stderr

T17566c.hs:11:3: error:
    • Different names for the same type variable:
        ‘k’ bound at T17566c.hs:10:3
        ‘k’ bound at T17566c.hs:11:3
    • In the class declaration for ‘C2’
